# the-archaeologist

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ui  README.md  build.sh  pyproject.toml
archaeologist_ui/: archaeologist_py.pyi  main.py  test.py
archaeologist_ui/components/: buttons.py  terminal.py
archaeologist_ui/core/: runner.py
archaeologist_ui/styles/: theme.py
archaeologist_ui/ui/: main_window.py
archaeologist_ui/utils/: paths.py
bindings/: python_module.cpp
config/: scanner_ignore.json
docker/: Dockerfile.tests  Dockerfile.ui  docker.scripts
include/archaeologist/config/: ignore_config.h
include/archaeologist/git/: repo_scanner.h
include/archaeologist/report/: git_repository_report.h  project_report.h
include/archaeologist/runner/: self_runner.h
include/archaeologist/scanner/: directory_scanner.h
include/archaeologist/search/: file_finder.h
include/tests/: test_runner.h
python/: ui.py
scripts/: entrypoint.sh
src/: main.cpp
src/config/: ignore_config.cpp
src/git/: repo_scanner.cpp
src/report/: git_repository_report.cpp  project_report.cpp
src/runner/: self_runner.cpp
src/scanner/: directory_scanner.cpp
src/search/: file_finder.cpp
tests/: basic_test.cpp  directory_scanner_list_test.cpp  directory_scanner_test.cpp  test_main.cpp
tests/_build/: build_test.cpp
tests/git/: git_invalid_repository_test.cpp  git_repo_test.cpp  git_repository_report_test.cpp  git_repository_validation_test.cpp  repo_tree_root_test.cpp  repository_name_test.cpp
tests/report/: project_report_test.cpp
tests/runner/: self_runner_test.cpp
tests/scanner/: directory_scanner_ignore_test.cpp  directory_tree_list_test.cpp  scanner_ignore_config_test.cpp
tests/search/: file_finder_print_test.cpp  file_finder_test.cpp
